# uniFiWebHook

./: .clangd  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/wifi_network/: CMakeLists.txt  Kconfig.projbuild  wifi_network.c
components/wifi_network/include/: wifi_network.h
main/: CMakeLists.txt  Kconfig.projbuild  http_listener.c  http_requester.c  i80_main.c  i80_ui.c  idf_component.yml  listener.c  lvglDisplay.c  main.c  network.c  page_intro.c  parallel.c  requester.c  rgb_panel.c  services.c  touch_panel.c  ui_page01.c
main/images/: esp_logo.c  skoonaIcon.c  skoonallc.c
